# capnproto

./: CMakeLists.txt
c++/: CMakeLists.txt
c++/samples/: CMakeLists.txt  external_capnp.cmake
c++/src/: CMakeLists.txt
c++/src/capnp/: CMakeLists.txt
c++/src/kj/: CMakeLists.txt
cmake/: FindSnappy.cmake  capnpc.cmake  fw.cmake
compiler/: CMakeLists.txt
